# eegcpm-dev

./: .gitignore  CLAUDE.md  README.md
eegcpm-0.1/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh
eegcpm-0.1/config/: batch_task_specification.yaml  clustering_comparison.yaml  multi_pipeline_comparison.yaml  preprocessing_config.yaml  preprocessing_mne_bids_equivalent.yaml  preprocessing_mne_bids_with_iclabel.yaml  preprocessing_variants.yaml  preprocessing_with_comparison_qc.yaml
eegcpm-0.1/eegcpm/: __init__.py  __main__.py  cli.py
eegcpm-0.1/eegcpm/advanced/: __init__.py
eegcpm-0.1/eegcpm/api/: __init__.py
eegcpm-0.1/eegcpm/cli/: __init__.py  connectivity.py  epochs.py  import_qc.py  main.py  preprocess.py  resume.py  source_reconstruct.py  status.py
eegcpm-0.1/eegcpm/config/: README.md  models.yaml
eegcpm-0.1/eegcpm/core/: __init__.py  config.py  dependencies.py  models.py  paths.py  project.py  task_config.py  validation.py
eegcpm-0.1/eegcpm/data/: __init__.py  bids_utils.py  conn_rois.py  event_mapping.py  hbn.py  loaders.py
eegcpm-0.1/eegcpm/evaluation/: __init__.py
eegcpm-0.1/eegcpm/modules/: __init__.py
eegcpm-0.1/eegcpm/pipeline/: __init__.py  aggregate_reports.py  base.py  checkpoint.py  combined_qc.py  epoch_combiner.py  executor.py  processing_state.py  run_processor.py  slurm.py
eegcpm-0.1/eegcpm/plugins/: __init__.py
eegcpm-0.1/eegcpm/ui/: __init__.py  app.py  project_manager.py
eegcpm-0.1/eegcpm/utils/: __init__.py  logging.py
eegcpm-0.1/eegcpm/workflow/: __init__.py  import_qc.py  state.py
eegcpm-0.1/scripts/: README.md  check_bad_channel_clustering.py  cleanup_and_archive.sh  generate_aggregate_report.py  launch_run_selection_ui.py  legacy_cli.py  regenerate_qc.py  run_clustering_comparison_batch.py  run_multi_pipeline_comparison_batch.py  test_clustering_preprocessing.py  test_clustering_qc.py  test_epoch_combination.py  test_legacy_preprocessing.py  test_new_qc_figures.py  test_run_processor.py
eegcpm-0.1/tests/: __init__.py  test_connectivity_extended.py  test_task_config_system.py
eegcpm-0.1/tests/unit/: test_checkpoint.py  test_qc.py  (+8 more)
eegcpm-0.1/tools/: migrate_qc_to_json.py
(+119 files in other folders)
